--- a/OrchardSkills.OrchardCore.TheCreativeTheme/Recipes/Snippets/landingpage.liquid
+++ b/OrchardSkills.OrchardCore.TheCreativeTheme/Recipes/Snippets/landingpage.liquid
@@ -1,269 +1,109 @@
 {% zone "Header" %}
 <!-- Header -->
 <header class="masthead">
-    <div class="container">
-        <div class="intro-text">
-            <div class="intro-lead-in">Welcome To Our Studio!</div>
-            <div class="intro-heading text-uppercase">It's Nice To Meet You</div>
-            <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
+    <div class="container h-100">
+        <div class="row h-100 align-items-center justify-content-center text-center">
+        <div class="col-lg-10 align-self-end">
+            <h1 class="text-uppercase text-white font-weight-bold">Your Favorite Source of Free Bootstrap Themes</h1>
+            <hr class="divider my-4">
+        </div>
+        <div class="col-lg-8 align-self-baseline">
+            <p class="text-white-75 font-weight-light mb-5">Start Bootstrap can help you build better websites using the Bootstrap framework! Just download a theme and start customizing, no strings attached!</p>
+            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+        </div>
         </div>
     </div>
 </header>
 {% endzone %}
 
-{% if Model.ContentItem.Content.Services.ContentItems.size > 0 %}
-<!-- Services -->
-<section class="page-section" id="services">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading text-uppercase">Services</h2>
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-            </div>
-        </div>
-        <div class="row text-center">
-            {% for service in Model.ContentItem.Content.Services.ContentItems %}
-            <div class="col-md-4">
-                <span class="fa-stack fa-4x">
-                    <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                    <i class="fas {{ service.Service.IconClass.Text }} fa-stack-1x fa-inverse"></i>
-                </span>
-                <h4 class="service-heading">{{ service.DisplayText }}</h4>
-                <p class="text-muted">{{ service.HtmlBodyPart.Html | raw }}</p>
-            </div>
-            {% endfor %}
-        </div>
+<!-- About Section -->
+<section class="page-section bg-primary" id="about">
+<div class="container">
+    <div class="row justify-content-center">
+    <div class="col-lg-8 text-center">
+        <h2 class="text-white mt-0">We've got what you need!</h2>
+        <hr class="divider light my-4">
+        <p class="text-white-50 mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
+        <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
     </div>
-</section>
-{% endif %}
-
-{% if Model.ContentItem.Content.Portfolio.ContentItems.size > 0 %}
-<!-- Portfolio Grid -->
-<section class="page-section bg-light" id="portfolio">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading text-uppercase">Portfolio</h2>
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-            </div>
-        </div>
-        <div class="row">
-            {% for project in Model.ContentItem.Content.Portfolio.ContentItems %}
-            <div class="col-md-4 col-sm-6 portfolio-item">
-                <div class="portfolio-link" data-toggle="modal" href="#portfolioModal{{ forloop.index }}">
-                    <div class="portfolio-hover">
-                        <div class="portfolio-hover-content">
-                            <i class="fas fa-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <img class="img-fluid" src="{{ project.Project.Image.Paths.first | asset_url | resize_url: width:480, height: 480, mode: 'stretch' }}" alt="{{ project.DisplayText }}">
-                </div>
-                <div class="portfolio-caption">
-                    <h4>{{ project.DisplayText }}</h4>
-                    <p class="text-muted">{{ project.Project.Category.Text }}</p>
-                </div>
-            </div>
-            {% endfor %}
-        </div>
-    </div>
-</section>
-{% endif %}
-
-{% if Model.ContentItem.Content.About.ContentItems.size > 0 %}
-<!-- About -->
-<section class="page-section" id="about">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading text-uppercase">About</h2>
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-12">
-                <ul class="timeline">
-                    {% for milestone in Model.ContentItem.Content.About.ContentItems %}
-                    <li class="{% cycle '', 'timeline-inverted' %}">
-                        <div class="timeline-image">
-                            <img class="rounded-circle img-fluid" src="{{ milestone.Milestone.Image.Paths.first | asset_url | resize_url: width:160, height: 160, mode: 'stretch' }}" alt="">
-                        </div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4>{{ milestone.Milestone.Date.Text }}</h4>
-                                <h4 class="subheading">{{ milestone.DisplayText }}</h4>
-                            </div>
-                            <div class="timeline-body">
-                                <p class="text-muted">{{ milestone.HtmlBodyPart.Html }}</p>
-                            </div>
-                        </div>
-                    </li>
-                    {% endfor %}
-                    <li class="timeline-inverted">
-                        <div class="timeline-image">
-                            <h4>
-                                Be Part
-                                <br>Of Our
-                                <br>Story!
-                            </h4>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</section>
-{% endif %}
-
-{% if Model.ContentItem.Content.Team.ContentItems.size > 0 %}
-<!-- Team -->
-<section class="page-section bg-light" id="team">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-            </div>
-        </div>
-        <div class="row">
-            {% for member in Model.ContentItem.Content.Team.ContentItems %}
-            <div class="col-sm-4">
-                <div class="team-member">
-                    <img class="mx-auto rounded-circle" src="{{ member.TeamMember.Picture.Paths.first | asset_url | resize_url: width:240, height: 240, mode: 'stretch' }}" alt="">
-                    <h4>{{ member.DisplayText }}</h4>
-                    <p class="text-muted">{{ member.TeamMember.Occupation.Text }}</p>
-                    <ul class="list-inline social-buttons">
-                        {% if member.TeamMember.Twitter.Text.size > 0 %}
-                        <li class="list-inline-item">
-                            <a href="https://www.twitter.com/{{ member.TeamMember.Twitter.Text }}">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                        </li>
-                        {% endif %}
-                        {% if member.TeamMember.Facebook.Text.size > 0 %}
-                        <li class="list-inline-item">
-                            <a href="https://www.facebook.com/{{ member.TeamMember.Facebook.Text }}">
-                                <i class="fab fa-facebook"></i>
-                            </a>
-                        </li>
-                        {% endif %}
-                        {% if member.TeamMember.LinkedIn.Text.size > 0 %}
-                        <li class="list-inline-item">
-                            <a href="https://www.linkedin.com/in/{{ member.TeamMember.LinkedIn.Text }}">
-                                <i class="fab fa-linkedin"></i>
-                            </a>
-                        </li>
-                        {% endif %}
-                    </ul>
-                </div>
-            </div>
-            {% endfor %}
-        </div>
-        <div class="row">
-            <div class="col-lg-8 mx-auto text-center">
-                <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
-            </div>
-        </div>
-    </div>
-</section>
-{% endif %}
-
-{% if Model.ContentItem.Content.Clients.ContentItems.size > 0 %}
-<!-- Clients -->
-<section class="page-section py-5">
-    <div class="container">
-        <div class="row">
-            {% for client in Model.ContentItem.Content.Clients.ContentItems %}
-            <div class="col-md-3 col-sm-6">
-                <a href="{{ client.Client.Url.Text }}">
-                    <img class="img-fluid d-block mx-auto" src="{{ client.Client.Logo.Paths.first | asset_url }}" alt="">
-                </a>
-            </div>
-            {% endfor %}
-        </div>
-    </div>
-</section>
-{% endif %}
-
-<!-- Contact -->
-<section class="page-section" id="contact">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading text-uppercase">Contact Us</h2>
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-12">
-                <form id="contactForm" name="sentMessage" novalidate>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <input class="form-control" id="name" type="text" placeholder="Your Name *" required data-validation-required-message="Please enter your name.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                            <div class="form-group">
-                                <input class="form-control" id="email" type="email" placeholder="Your Email *" required data-validation-required-message="Please enter your email address.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                            <div class="form-group">
-                                <input class="form-control" id="phone" type="tel" placeholder="Your Phone *" required data-validation-required-message="Please enter your phone number.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <textarea class="form-control" id="message" placeholder="Your Message *" required data-validation-required-message="Please enter a message."></textarea>
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="clearfix"></div>
-                        <div class="col-lg-12 text-center">
-                            <div id="success"></div>
-                            <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Send Message</button>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-</section>
-
-<!-- Modals -->
-{% for project in Model.ContentItem.Content.Portfolio.ContentItems %}
-<div class="portfolio-modal modal fade" id="portfolioModal{{ forloop.index }}" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl"></div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 mx-auto">
-                        <div class="modal-body">
-                            <!-- Project Details Go Here -->
-                            <h2 class="text-uppercase">{{ project.DisplayText }}</h2>
-                            <p class="item-intro text-muted">{{ project.Project.Category.Text }}</p>
-                            <img class="img-fluid d-block mx-auto" src="{{ project.Project.Image.Paths.first | asset_url | resize_url: width:480, height: 480, mode: 'max' }}" alt="{{ project.DisplayText }}">
-                            <p>{{ project.HtmlBodyPart.Html | raw }}</p>
-                            {% comment %}
-                            <ul class="list-inline">
-                                <li>Date: January 2017</li>
-                                <li>Client: Threads</li>
-                                <li>Category: Illustration</li>
-                            </ul>
-                            {% endcomment %}
-                            <button class="btn btn-primary" data-dismiss="modal" type="button">
-                                <i class="fa fa-times"></i>
-                                Close Project
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
 </div>
-{% endfor %}
+</section>
+
+{% if Model.ContentItem.Content.Services.ContentItems.size > 0 %}
+  <!-- Services Section -->
+  <section class="page-section" id="services">
+    <div class="container">
+      <h2 class="text-center mt-0">At Your Service</h2>
+      <hr class="divider my-4">
+      <div class="row">
+        {% for service in Model.ContentItem.Content.Services.ContentItems %}
+        <div class="col-lg-3 col-md-6 text-center">
+            <i class="fas fa-4x {{ service.Service.IconClass.Text }} text-primary mb-4"></i>
+            <h3 class="h4 mb-2">{{ service.DisplayText }}</h4>
+            <p class="text-muted mb-0">{{ service.HtmlBodyPart.Html | raw }}</p>
+        </div>
+        {% endfor %}
+      </div>
+    </div>
+  </section>
+{% endif %}
+
+<!-- {{ Model.ContentItem.Content }} -->
+
+{% if Model.ContentItem.Content.Portfolio.ContentItems.size > 0 %}
+  <!-- Portfolio Section -->
+  <section id="portfolio">
+    <div class="container-fluid p-0">
+      <div class="row no-gutters">
+      {% for project in Model.ContentItem.Content.Portfolio.ContentItems %}
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box" href="{{ project.Project.Image.Paths.first | asset_url }}">
+            <img class="img-fluid" src="{{ project.Project.Thumbnail.Paths.first | asset_url }}" alt="">
+            <div class="portfolio-box-caption">
+              <div class="project-category text-white-50">
+                {{ project.Project.Category.Text }}
+              </div>
+              <div class="project-name">
+                {{ project.Project.TitlePart.Title }}
+              </div>
+            </div>
+          </a>
+        </div>
+      {% endfor %}
+      </div>
+    </div>
+  </section>
+{% endif %}
+
+  <!-- Call to Action Section -->
+  <section class="page-section bg-dark text-white">
+    <div class="container text-center">
+      <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
+      <a class="btn btn-light btn-xl" href="https://startbootstrap.com/themes/creative/">Download Now!</a>
+    </div>
+  </section>
+
+<!-- Contact Section -->
+<section class="page-section" id="contact">
+<div class="container">
+    <div class="row justify-content-center">
+    <div class="col-lg-8 text-center">
+        <h2 class="mt-0">Let's Get In Touch!</h2>
+        <hr class="divider my-4">
+        <p class="text-muted mb-5">Ready to start your next project with us? Give us a call or send us an email and we will get back to you as soon as possible!</p>
+    </div>
+    </div>
+    <div class="row">
+    <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
+        <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
+        <div>+1 (202) 555-0149</div>
+    </div>
+    <div class="col-lg-4 mr-auto text-center">
+        <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
+        <!-- Make sure to change the email address in anchor text AND the link below! -->
+        <a class="d-block" href="mailto:contact@yourwebsite.com">contact@yourwebsite.com</a>
+    </div>
+    </div>
+</div>
+</section>
